perimeter_quiz/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
D:\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
D:\lib\bluejcore.jar;D:\lib\junit-4.11.jar;D:\lib\hamcrest-core-1.3.jar;D:\lib\lang-stride.jar;D:\lib\userlib\apache-csv.jar;D:\lib\userlib\courserajava.jar;D:\lib\userlib\pi4j-core.jar;D:\lib\userlib\pi4j-device.jar;D:\lib\userlib\pi4j-gpio-extension.jar;D:\lib\userlib\pi4j-service.jar;D:\perimeter_quiz
-d
D:\perimeter_quiz\doc
-encoding
UTF-8
-charset
UTF-8
D:\perimeter_quiz\PerimeterAssignmentRunner.java
<---- end of javadoc command ---->
Loading source file D:\perimeter_quiz\PerimeterAssignmentRunner.java...
D:\perimeter_quiz\PerimeterAssignmentRunner.java:34: error: ';' expected
        double avg = getPerimeter(s) / getNumPoints(s)
                                                      ^
1 error
